# world-model-jepa

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: 00_START_HERE.md  01_world_models_and_jepa_vision.md  02_vision_transformers.md  03_from_mae_to_ijepa.md  04_vjepa_paper_walkthrough.md  05_collapse_ema_and_training.md  06_evaluation_and_probing.md  07_research_gaps_and_your_path.md
notebooks/: 01_vit_patches_and_attention.ipynb  02_masked_autoencoder_mini.ipynb  03_ijepa_mini_images.ipynb  04_vjepa_mini_moving_mnist.ipynb  05_probing_and_analysis.ipynb
src/vjepa_mini/: __init__.py  config.py  utils.py
src/vjepa_mini/data/: __init__.py  masking.py  moving_mnist.py
src/vjepa_mini/eval/: __init__.py  attentive_probe.py  visualize.py
src/vjepa_mini/models/: __init__.py  patch_embed.py  predictor.py  vit.py  vjepa.py
src/vjepa_mini/train/: __init__.py  schedules.py  trainer.py
tests/: test_smoke.py
