[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vjepa-mini"
version = "0.1.0"
description = "A small-scale, from-scratch V-JEPA for learning and research on a single GPU"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

[tool.setuptools.packages.find]
where = ["src"]
